Finis mediaqueries all pages are responsive now

--- a/index.html
+++ b/index.html
@@ -64,18 +64,22 @@
                                 <a href="#"><i class="fas fa-angle-right"></i></a>
                         </div>
                     </div>
-                    <div class="hot-description">
+                    <div class="hot-description flex">
                         <h3>Demon Slayer / Kimetsu no Yaiba Tomioka Giyuu Kimono Cosplay Costume</h3>
                         <div>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat ipsa maxime delectus nesciunt distinctio saepe, quod minus nostrum rerum aperiam nulla non officiis, voluptas quisquam dicta labore? Consectetur excepturi atque illo asperiores delectus sed, ipsa facere. Quisquam nihil porro harum eligendi repudiandae dolor excepturi, fuga sed maxime animi sunt aliquid.</p>
+                            <p class="desktop-p">Lorem ipsum dolor sit amet consectetur adipisicing elit.  quod minus nostrum rerum aperiam nulla non officiis?</p>
+                            <a href="#" class="movil-p1">More info click here</a>
                         </div>
-                        <div>
+                        <div class="data-des">
                             <p>By: <a href="#" class="description-a">Jorge Clone</a></p>
                             <p>Location: <a href="#"class="description-a">Sau Paulo</a></p>
                         </div>
                         <div class="buttons-description">
                             <a href="#" class="buttons-a">56.99$</a>
-                            <a href="#" class="buttons-a"><i class="fas fa-cart-arrow-down"></i> Purchase details</a>
+                            <a href="#" class="buttons-a purch1"><i class="fas fa-cart-arrow-down"></i> Purchase details</a>
+                            <div class="plus">
+                                <a href="#"><i class="fas fa-plus"></i></a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -117,7 +121,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media3">
                             <div class="img-carrousel">
                                 <img src="./src/img/anime-3.jpg" alt="anime2">
                             </div>
@@ -133,7 +137,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media2">
                             <div class="img-carrousel">
                                 <img src="./src/img/anime-4.jpg" alt="anime2">
                             </div>
@@ -149,7 +153,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media1">
                             <div class="img-carrousel">
                                 <img src="./src/img/anime-6.jpg" alt="anime2">
                             </div>
@@ -165,7 +169,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media1">
                             <div class="img-carrousel">
                                 <img src="./src/img/anime-7.jpg" alt="anime2">
                             </div>
@@ -203,7 +207,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media3">
                             <div class="img-carrousel">
                                 <img src="./src/img/anime-9.jpg" alt="anime2">
                             </div>
@@ -219,7 +223,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media2">
                             <div class="img-carrousel">
                                 <img src="./src/img/anime-10.jpg" alt="anime2">
                             </div>
@@ -235,7 +239,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media1">
                             <div class="img-carrousel">
                                 <img src="./src/img/anime-11.jpg" alt="anime2">
                             </div>
@@ -251,7 +255,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media1">
                             <div class="img-carrousel">
                                 <img src="./src/img/anime-12.jpg" alt="anime2">
                             </div>
@@ -289,7 +293,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media3">
                             <div class="img-carrousel">
                                 <img src="./src/img/anime-14.jpg" alt="anime2">
                             </div>
@@ -305,7 +309,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media2">
                             <div class="img-carrousel">
                                 <img src="./src/img/anime-15.jpg" alt="anime2">
                             </div>
@@ -321,7 +325,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media1">
                             <div class="img-carrousel">
                                 <img src="./src/img/anime-16.jpg" alt="anime2">
                             </div>
@@ -337,7 +341,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media1">
                             <div class="img-carrousel">
                                 <img src="./src/img/anime-17.jpg" alt="anime2">
                             </div>
@@ -387,7 +391,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media3">
                             <div class="img-carrousel">
                                 <img src="./src/img/game-2.jpg" alt="game2">
                             </div>
@@ -403,7 +407,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media2">
                             <div class="img-carrousel">
                                 <img src="./src/img/game-3.jpg" alt="game3">
                             </div>
@@ -419,7 +423,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media1">
                             <div class="img-carrousel">
                                 <img src="./src/img/game-4.jpg" alt="game4">
                             </div>
@@ -435,7 +439,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media1">
                             <div class="img-carrousel">
                                 <img src="./src/img/game-5.jpg" alt="game5">
                             </div>
@@ -473,7 +477,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media3">
                             <div class="img-carrousel">
                                 <img src="./src/img/game-7.jpg" alt="game7">
                             </div>
@@ -489,7 +493,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media2">
                             <div class="img-carrousel">
                                 <img src="./src/img/game-8.jpg" alt="gam8">
                             </div>
@@ -505,7 +509,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media1">
                             <div class="img-carrousel">
                                 <img src="./src/img/game-9.jpg" alt="game9">
                             </div>
@@ -521,7 +525,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media1">
                             <div class="img-carrousel">
                                 <img src="./src/img/game-10.jpg" alt="anime2">
                             </div>
@@ -559,7 +563,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media3">
                             <div class="img-carrousel">
                                 <img src="./src/img/game-12.jpg" alt="game12">
                             </div>
@@ -575,7 +579,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media2">
                             <div class="img-carrousel">
                                 <img src="./src/img/game-13.jpg" alt="game13">
                             </div>
@@ -591,7 +595,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media1">
                             <div class="img-carrousel">
                                 <img src="./src/img/game-14.jpg" alt="game14">
                             </div>
@@ -607,7 +611,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media1">
                             <div class="img-carrousel">
                                 <img src="./src/img/game-15.jpg" alt="game15">
                             </div>
@@ -657,7 +661,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media3">
                             <div class="img-carrousel">
                                 <img src="./src/img/movie-2.jpg" alt="mov2">
                             </div>
@@ -673,7 +677,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media2">
                             <div class="img-carrousel">
                                 <img src="./src/img/movie-3.jpg" alt="mov3">
                             </div>
@@ -689,7 +693,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media1">
                             <div class="img-carrousel">
                                 <img src="./src/img/movie-4.jpg" alt="mov4">
                             </div>
@@ -705,7 +709,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media1">
                             <div class="img-carrousel">
                                 <img src="./src/img/movie-5.jpg" alt="anime2">
                             </div>
@@ -743,7 +747,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media3">
                             <div class="img-carrousel">
                                 <img src="./src/img/movie-7.jpg" alt="mov7">
                             </div>
@@ -759,7 +763,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media2">
                             <div class="img-carrousel">
                                 <img src="./src/img/movie-8.jpg" alt="mov8">
                             </div>
@@ -775,7 +779,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media1">
                             <div class="img-carrousel">
                                 <img src="./src/img/movie-9.jpg" alt="mov9">
                             </div>
@@ -791,7 +795,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media1">
                             <div class="img-carrousel">
                                 <img src="./src/img/movie-10.jpg" alt="mov10">
                             </div>
@@ -829,7 +833,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media3">
                             <div class="img-carrousel">
                                 <img src="./src/img/movie-12.jpg" alt="mov12">
                             </div>
@@ -845,7 +849,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media2">
                             <div class="img-carrousel">
                                 <img src="./src/img/movie-13.jpg" alt="mov13">
                             </div>
@@ -861,7 +865,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media1">
                             <div class="img-carrousel">
                                 <img src="./src/img/movie-14.jpg" alt="mov14">
                             </div>
@@ -877,7 +881,7 @@
                                 <p class="precio-b">45.84 $</p>
                             </div>
                         </div>
-                        <div class="item-carrousel">
+                        <div class="item-carrousel media1">
                             <div class="img-carrousel">
                                 <img src="./src/img/movie-15.jpg" alt="anime2">
                             </div>
