Fixing all lynters issues

--- a/search.html
+++ b/search.html
@@ -415,10 +415,10 @@
                 <p>Cophyright© Zattix.com All Rights Reserved. Designed by Mohammed Awad - <br> Used for learning purposes only by Giordano Díaz (Full Stack dev-Jr.)</p>
             </div>
             <div class="social-links">
-                <a href="https://github.com/diazgio" target="_blank" rel="noopener"><i class="fab fa-github"></i></a>
-                <a href="https://www.facebook.com/GiorDiaz93" target="_blank" rel="noreferrer"><i class="fab fa-facebook"></i></a>
-                <a href="https://twitter.com/giordano_diaz" target="_blank" rel="noreferrer"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.linkedin.com/in/giordano-diaz/" target="_blank" rel="noreferrer"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://github.com/diazgio" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
+                <a href="https://www.facebook.com/GiorDiaz93" target="_blank" rel="noreferrer noopener"><i class="fab fa-facebook"></i></a>
+                <a href="https://twitter.com/giordano_diaz" target="_blank" rel="noreferrer noopener"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.linkedin.com/in/giordano-diaz/" target="_blank" rel="noreferrer noopener"><i class="fab fa-linkedin-in"></i></a>
             </div>
         </div>
     </footer>
