Horizontal scroll from index movil fixed, and some styles changed on filters section on search page

--- a/search.html
+++ b/search.html
@@ -55,60 +55,103 @@
                     <div>
                         <h4>GENDER</h4>
                         <div class="gender">
-                            <div>
+                            <div class="desktopFilter">
                                 <input type="checkbox" id="genderM">
                                 <label for="genderM">Male</label>
                             </div>
-                            <div>
+                            <div class="movilFilter">
+                                <input type="checkbox" id="genderMmov">
+                                <label for="genderMmov">M</label>
+                            </div>
+                            <div class="desktopFilter">
                                 <input type="checkbox" id="genderF">
                                 <label for="genderF">Female</label>
+                            </div>
+                            <div class="movilFilter">
+                                <input type="checkbox" id="genderFmov">
+                                <label for="genderFmov">F</label>
                             </div>
                         </div>
                     </div>
                     <h4>SIZE</h4>
                     <div class="size">
                         <div>
-                            <div>
+                            <div class="desktopFilter">
                                 <input type="checkbox" id="xs">
                                 <label for="genderM">Extra-Small SM</label>
                             </div>
-                            <div>
+                            <div class="movilFilter">
+                                <input type="checkbox" id="genderSMmov">
+                                <label for="genderSMmov">SM</label>
+                            </div>
+                            <div class="desktopFilter">
                                 <input type="checkbox" id="s">
                                 <label for="genderM">Small S</label>
                             </div>
-                            <div>
+                            <div class="movilFilter">
+                                <input type="checkbox" id="genderSmov">
+                                <label for="genderSmov">S</label>
+                            </div>
+                            <div class="desktopFilter">
                                 <input type="checkbox" id="m">
                                 <label for="genderM">Medium M</label>
                             </div>
-                            <div>
+                            <div class="movilFilter">
+                                <input type="checkbox" id="genderMemov">
+                                <label for="genderMemov">M</label>
+                            </div>
+                            <div class="desktopFilter">
                                 <input type="checkbox" id="l">
                                 <label for="genderM">Large L</label>
                             </div>
-                            <div>
+                            <div class="movilFilter">
+                                <input type="checkbox" id="genderLmov">
+                                <label for="genderLmov">L</label>
+                            </div>
+                            <div class="desktopFilter">
                                 <input type="checkbox" id="xl">
                                 <label for="genderM">Extra-Large XL</label>
+                            </div>
+                            <div class="movilFilter">
+                                <input type="checkbox" id="genderXLmov">
+                                <label for="genderXLmov">XL</label>
                             </div>
                         </div>
                     </div>
                     <h4>PRICE RANGE</h4>
                     <div class="price">
-                        <div>
+                        <div class="desktopFilter">
                             <input type="checkbox" id="f-range">
                             <label for="f-range">10$ - 100$</label>
                         </div>
-                        <div>
+                        <div class="movilFilter">
+                            <input type="checkbox" id="f-rangemov">
+                            <label for="f-rangemov"> &lt; 400$</label>
+                        </div>
+                        <div class="desktopFilter">
                             <input type="checkbox" id="s-range">
                             <label for="s-range">100$ - 200$</label>
                         </div>
-                        <div>
+                        <div class="movilFilter">
+                            <input type="checkbox" id="s-rangemov">
+                            <label for="s-rangemov"> &lt; 300$</label>
+                        </div>
+                        <div class="desktopFilter">
                             <input type="checkbox" id="t-range">
                             <label for="t-range">200$ - 300$</label>
                         </div>
-                        <div>
+                        <div class="movilFilter">
+                            <input type="checkbox" id="t-rangemov">
+                            <label for="t-rangemov"> &lt; 200$</label>
+                        </div>
+                        <div class="desktopFilter">
                             <input type="checkbox" id="fo-range">
                             <label for="fo-range">300$ - 400$</label>
                         </div>
-
+                        <div class="movilFilter">
+                            <input type="checkbox" id="fo-rangemov">
+                            <label for="fo-rangemov"> &lt; 100$</label>
+                        </div>
                     </div>
                 </div>
             </div>
